--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/main.scss" />
     <title></title>
   </head>
   <body>
-    <load ="partials/header.html" />
-    
-
+    <load src="./partials/hero.htm"/>
+    <load src="./partials/impression.html"></load>
+    <load src="./partials/trip.html"></load>
+    <load src="./partials/imagine.html"></load>
+    <load src="./partials/work.html"></load>
+    <load src="./partials/certify.html"></load>
+    <load src="./partials/footer.html"></load>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
