--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
     <title></title>
   </head>
   <body>
-    <load src="./partials/hero.htm"/>
-    <load src="./partials/impression.html"></load>
-    <load src="./partials/trip.html"></load>
-    <load src="./partials/imagine.html"></load>
-    <load src="./partials/work.html"></load>
-    <load src="./partials/certify.html"></load>
-    <load src="./partials/footer.html"></load>
+    <load ="partials/hero.html" />
+    <load ="partials/impression.html" />
+    <load ="partials/trip.html" />
+    <load ="partials/imagine.html" />
+    <load ="partials/work.html" />
+    <load ="partials/certify.html" />
+    <load ="partials/footer.html" />
     <script src="./index.js" type="module"></script>
   </body>
 </html>
