--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <title></title>
   </head>
   <body>
-    <!-- <load ="partials/hero.html" /> -->
+    <load ="partials/hero.html" />
     <load ="partials/impression.html" />
-    <!-- <load ="partials/trip.html" />
+    <load ="partials/trip.html" />
     <load ="partials/imagine.html" />
     <load ="partials/work.html" />
     <load ="partials/certify.html" />
-    <load ="partials/footer.html" />  -->
+    <load ="partials/footer.html" /> 
     <script src="./index.js" type="module"></script>
   </body>
 </html>
